--- a/project/src/main/res/layout/widget_hotel_filter.xml
+++ b/project/src/main/res/layout/widget_hotel_filter.xml
@@ -326,7 +326,6 @@
                     android:clickable="true"
                     android:orientation="horizontal"
                     android:layout_gravity="right"
-                    android:paddingLeft="@dimen/lx_sort_filter_padding"
                     android:paddingRight="@dimen/lx_sort_filter_padding"
                     android:visibility="gone">
 
@@ -337,8 +336,6 @@
                         android:background="@android:color/transparent"
                         android:layout_centerVertical="true"
                         android:clickable="false"
-                        android:paddingTop="5dp"
-                        android:paddingRight="5dp"
                         android:src="@drawable/read_more" />
 
                     <TextView
@@ -347,6 +344,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_toEndOf="@id/show_more_less_icon"
+                        android:paddingLeft="5dp"
                         android:text="@string/show_more" />
                 </RelativeLayout>
 
