--- a/project/src/main/res/layout/hotel_cell.xml
+++ b/project/src/main/res/layout/hotel_cell.xml
@@ -116,13 +116,15 @@
                             style="@style/RatingBar.UserReview.Material.Yellow"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="2dp"
+                            android:layout_gravity="center_vertical"
                             android:stepSize=".5" />
 
                         <com.expedia.bookings.widget.TextView
                             android:id="@+id/hotel_amenity_or_distance_from_location"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:paddingLeft="3dp"
                             android:textColor="@color/hotel_cell_light_gray_text"
                             android:textSize="12sp" />
 
