Fix various defects
5355 Use display name but dont strip out whats in parenthesis
5240 X button exits screen and show placeholder text
5362 transition clearing prevents suggest from showing up after error screen.
5354 Use POS config for Air Attach
4961 Fix rating bar padding

--- a/project/src/main/res/layout/widget_hotel_search_params.xml
+++ b/project/src/main/res/layout/widget_hotel_search_params.xml
@@ -48,6 +48,7 @@
                     style="@style/CarAutocomplete"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
+                    android:hint="@string/search_location"
                     android:layout_toRightOf="@id/location_image_view"
                     android:layout_weight="1"
                     android:textColorHighlight="#12AD9F"
@@ -169,7 +170,8 @@
         android:id="@+id/drop_down_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF" />
+        android:background="#FFFFFF"
+        android:paddingBottom="25dp"/>
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
