--- a/project/src/main/res/layout/hotel_cell.xml
+++ b/project/src/main/res/layout/hotel_cell.xml
@@ -86,7 +86,7 @@
                     android:textSize="9sp" />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|left"
                     android:orientation="vertical"
@@ -106,7 +106,7 @@
 
                     <LinearLayout
                         android:id="@+id/rating_amenity_container"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="bottom"
                         android:orientation="horizontal">
@@ -117,14 +117,14 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:stepSize=".5" />
+                            android:stepSize="1" />
 
                         <com.expedia.bookings.widget.TextView
                             android:id="@+id/hotel_amenity_or_distance_from_location"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:paddingLeft="3dp"
+                            android:layout_marginLeft="6dp"
                             android:textColor="@color/hotel_cell_light_gray_text"
                             android:textSize="12sp" />
 
