--- a/project/src/airAsiaGo/res/values/colors.xml
+++ b/project/src/airAsiaGo/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="collection_overlay_color">#56a1d5</color>
     <color name="itin_flight_line_color">#5195BB</color>
     <color name="hotel_sale_text_color">@color/action_bar_bg_color</color>
+    <color name="calendar_cell_selected_date_text">@android:color/primary_text_dark</color>
 
     <color name="tablet_confirmation_action_color">#E31F0E</color>
     <color name="tablet_sort_filter_done_selector">#E31F0E</color>
