--- a/project/src/main/res/layout/widget_traveler_picker.xml
+++ b/project/src/main/res/layout/widget_traveler_picker.xml
@@ -85,6 +85,7 @@
             android:id="@+id/children_ages"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/hotel_traveler_table_margin"
             android:orientation="vertical"
             android:textSize="15sp">
 
@@ -94,26 +95,13 @@
                 android:layout_marginBottom="@dimen/hotel_traveler_table_margin"
                 android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1">
-
                     <Spinner
                         android:id="@+id/child_spinner_1"
                         style="@style/HotelSpinner" />
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1">
-
                     <Spinner
                         android:id="@+id/child_spinner_2"
                         style="@style/HotelSpinner" />
-                </LinearLayout>
 
             </LinearLayout>
 
@@ -123,26 +111,14 @@
                 android:layout_marginBottom="@dimen/hotel_traveler_table_margin"
                 android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1">
-
                     <Spinner
                         android:id="@+id/child_spinner_3"
                         style="@style/HotelSpinner" />
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1">
 
                     <Spinner
                         android:id="@+id/child_spinner_4"
                         style="@style/HotelSpinner" />
-                </LinearLayout>
 
             </LinearLayout>
 
