--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -171,6 +171,7 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">@dimen/hotel_spinner_height</item>
         <item name="android:layout_weight">1</item>
+        <item name="android:dropDownVerticalOffset">20dp</item>
     </style>
 
     <style name="CarsCardView" parent="V2.Theme.Cars">
