--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -155,6 +155,9 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:paddingLeft">20dp</item>
         <item name="android:paddingRight">20dp</item>
+        <item name="android:paddingBottom">2dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:height">38dp</item>
     </style>
 
     <style name="CarFakeSpinner.Light" parent="@style/Widget.AppCompat.EditText">
