--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -167,6 +167,9 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:paddingLeft">20dp</item>
         <item name="android:paddingRight">20dp</item>
+        <item name="android:paddingBottom">2dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:height">38dp</item>
     </style>
 
     <style name="LXBookingButton" parent="V2.Theme.LX">   
