--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -96,6 +96,7 @@
 
         <!-- CVV attrs -->
         <item name="skin_cvvBookButtonTextColor">@android:color/black</item>
+        <item name="skin_errorWidgetEditButtonStyle">@style/CarButton</item>
     </style>
 
     <style name="CarsActionBarTitle" parent="V2.Theme.Cars">
