--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -338,4 +338,6 @@
     <attr name="skin_lxErrorCurrentLocationText" format="reference" />
     <attr name="skin_lxErrorWidgetDrawable" format="reference" />
 
+    <attr name="skin_errorWidgetEditButtonStyle" format="reference" />
+
 </resources>
