--- a/project/src/airAsiaGo/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/airAsiaGo/res/values-sw600dp/tablet_themes.xml
@@ -9,6 +9,7 @@
         <item name="skin_collection_placeholder">@drawable/bg_itin_placeholder</item>
         <item name="skin_tablet_hotel_room_rate_select_button">@drawable/tablet_hotel_room_select_button</item>
         <item name="skin_tablet_addToTrip_button">@drawable/tablet_hotel_room_add_button</item>
+        <item name="android:actionMenuTextColor">@color/actionbar_menu_text_color</item>
 
         <item name="skin_hotelPriceStandardColor">#ffffff</item>
         <item name="skin_hotelPriceSaleColor">#ffffff</item>
@@ -27,11 +28,12 @@
 
         <item name="skin_tablet_search_result_error_button_drawable">@drawable/bg_tablet_search_result_error_action_button</item>
         <item name="skin_tablet_search_result_error_button_text_color">@color/tablet_search_error_text_color</item>
-        <item name="skin_tablet_dates_popup_done_color">@color/tablet_results_search_blue</item>
+        <item name="skin_tablet_dates_popup_done_color">@color/tablet_results_search_done</item>
         <item name="skin_skin_tablet_dates_popup_done_drawable">@drawable/ic_tablet_search_results_popup_done_check</item>
-        <item name="skin_tablet_hotel_details_background_drawable">@drawable/ic_hotel_details_background_layer_list</item>
+        <item name="skin_tablet_hotel_details_background_drawable">@drawable/ic_hotel_details_background_layer_list_aag</item>
         <item name="skin_tabletHotelDetailsStarRatingStyle">@style/RatingBar.Star.HotelDetails.AAG</item>
         <item name="skin_tabletHotelDetailsCircleRatingStyle">@style/RatingBar.Circle.HotelDetails.AAG</item>
+
 
         <item name="skin_tablet_flight_confirmation_placeholder">@drawable/bg_itin_placeholder</item>
         <item name="skin_tablet_hotel_confirmation_placeholder">@drawable/bg_itin_placeholder</item>
@@ -51,11 +53,11 @@
         <item name="android:checkboxStyle">@style/Widget.CompoundButton.CheckBox</item>
         <item name="android:homeAsUpIndicator" >@drawable/ic_action_bar_back_arrow_white</item>
 
-        <item name="skin_bgSaleTextViewDrawable">@drawable/bg_sale_text_view</item>
+        <item name="skin_bgSaleTextViewDrawable">@drawable/bg_sale_text_view_aag</item>
         <item name="skin_bgFlightSummaryRowTablet">@drawable/bg_flight_summary_row_tablet</item>
         <item name="skin_bgSelectedFlightCard">@drawable/bg_selected_flight_card</item>
         <item name="skin_bgFlightSummaryRowReturnLegTabletDrawable">@drawable/bg_flight_summary_row_return_leg_tablet</item>
-        <item name="skin_tabletCalenderResultsSearchBlue">@color/tablet_results_search_blue</item>
+        <item name="skin_tabletCalenderResultsSearchBlue">@color/tablet_results_calendar_dates</item>
         <item name="skin_sectionFlightEditTravelerLinkColor">@color/section_flight_edit_traveler_link_color</item>
         <item name="skin_roomRateRefundableCancellationTextColor">@color/room_rate_refundable_cancellation_text_color</item>
         <item name="skin_icTabletConfirmationCheckmarkDrawable">@drawable/ic_tablet_confirmation_checkmark</item>
