--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -612,6 +612,7 @@
                         android:id="@+id/hotel_name_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:maxLines="1"
                         android:textColor="@color/itin_white_text"
                         android:textSize="18sp"
