Account creation skinning for AAG

--- a/project/src/airAsiaGo/res/values/colors.xml
+++ b/project/src/airAsiaGo/res/values/colors.xml
@@ -37,4 +37,9 @@
     <color name="lx_secondary_color_disabled">@color/aag_launch_lob_bg</color>
     <color name="lx_unchecked_toggle_text_color">@android:color/white</color>
     <color name="lx_ripple_color">#8b1a10 </color>
+
+    <!--Account Lib Colors -->
+    <color name="acct__btn_sign_in_text_aag">#FFFFFF</color>
+    <color name="acct__bg_input_text_error_aag">#FFFFFF</color>
+    <color name="acct__bg_input_text_good_aag">#EEEEEE</color>
 </resources>
