--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -290,6 +290,7 @@
     <color name="lx_sort_filter_top_bar_text_color">#5C5C5C</color>
     <color name="lx_sort_filter_pressed_row_color">#D8D8D8</color>
 
+    <color name="lx_ripple_color">#F7840D</color>
     <color name="leanplum_dialog_button_color">#fc2176</color>
 
     <!--Account Lib Colors -->
