5313 - Book by phone button disappears fix.
Added a space to ensure it works on all devices.
View margin doesn't reflect on some of the pre-lollipop device.
eiwork.mingle.thoughtworks.com/projects/eb_ad_app/cards/5313

--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -528,6 +528,14 @@
                         android:textColor="@color/hotels_primary_color"
                         android:textSize="16sp" />
                 </LinearLayout>
+
+                <Space
+                    android:id="@+id/spacer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/book_by_phone_container"
+                    android:background="#EEEEEE"/>
+
             </RelativeLayout>
 
         </RelativeLayout>
