--- a/project/src/main/res/layout/widget_hotel_filter.xml
+++ b/project/src/main/res/layout/widget_hotel_filter.xml
@@ -15,7 +15,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:focusable="true"
+                android:focusableInTouchMode ="true"
+                android:clickable="true">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -41,21 +44,19 @@
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:layout_marginRight="5dp"
-                            android:src="@drawable/car_hotel"
+                            android:src="@drawable/filter_hotel_icon"
                             android:tint="@color/hotel_filter_hotel_name_icon" />
 
                         <EditText
                             android:id="@+id/filter_hotel_name_edit_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
                             android:hint="@string/filter_hotel_name_hint"
-                            android:layout_toEndOf="@id/hotel_name"
+                            android:layout_toRightOf="@id/hotel_name"
                             android:singleLine="true"
                             android:textSize="15sp"
-                            android:paddingBottom="12dp"
-                            android:drawableBottom="@color/wallet_highlighted_text_holo_light"
-                            android:inputType="textNoSuggestions"/>
+                            android:paddingBottom="15dp"
+                            android:inputType="textNoSuggestions" />
 
                         <ImageView
                             android:id="@+id/clear_search_button"
@@ -65,27 +66,37 @@
                             android:layout_centerVertical="true"
                             android:paddingLeft="8dp"
                             android:paddingRight="8dp"
-                            android:src="@drawable/ic_clear_edittext"
+                            android:src="@drawable/filter_clear"
+                            android:tint="@color/hotel_filter_hotel_name_icon"
                             android:visibility="gone"/>
                     </RelativeLayout>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="6dp"
-                        android:layout_marginTop="19dp"
+                        android:layout_marginTop="@dimen/lx_sort_filter_padding"
                         android:text="@string/Sort_By"
                         android:textSize="15sp"
                         android:textColor="@color/hotels_primary_color" />
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/lx_sort_filter_padding"
+                        app:cardCornerRadius="3dp"
+                        app:cardElevation="1dp"
+                        app:cardUseCompatPadding="true"
+                        android:background="?android:attr/selectableItemBackground">
 
                     <Spinner
                         style="@style/HotelSpinner"
                         android:id="@+id/sort_by_selection_spinner"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
                         android:background="@drawable/spinner_hotel_filter_sort"
                         android:dropDownWidth="match_parent" />
+
+                    </android.support.v7.widget.CardView>
 
                 </LinearLayout>
 
@@ -131,15 +142,15 @@
 
                     <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:layout_gravity="center"
+                        android:layout_height="50dp"
                         android:layout_marginTop="15dp"
                         app:cardCornerRadius="3dp"
-                        app:cardElevation="1dp">
+                        app:cardElevation="1dp"
+                        app:cardUseCompatPadding="true">
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_gravity="center"
                             android:gravity="center_vertical|center"
                             android:orientation="horizontal">
@@ -150,11 +161,12 @@
                                 android:layout_height="match_parent"
                                 android:clickable="true"
                                 android:layout_weight="1">
-                                <ImageView
+                                <ImageButton
                                     android:id="@+id/filter_hotel_star_rating_one"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="match_parent"
                                     android:src="@drawable/filter_1star"
+                                    android:background="?android:attr/selectableItemBackground"
                                     android:layout_gravity="center" />
                             </LinearLayout>
 
@@ -169,12 +181,13 @@
                                 android:layout_height="match_parent"
                                 android:clickable="true"
                                 android:layout_weight="1.5">
-                                <ImageView
+                                <ImageButton
                                     android:id="@+id/filter_hotel_star_rating_two"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="match_parent"
                                     android:layout_centerVertical="true"
                                     android:src="@drawable/filter_2star"
+                                    android:background="?android:attr/selectableItemBackground"
                                     android:layout_gravity="center" />
                             </LinearLayout>
 
@@ -189,12 +202,13 @@
                                 android:layout_height="match_parent"
                                 android:clickable="true"
                                 android:layout_weight="2">
-                                <ImageView
+                                <ImageButton
                                     android:id="@+id/filter_hotel_star_rating_three"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="match_parent"
                                     android:layout_centerVertical="true"
                                     android:src="@drawable/filter_3star"
+                                    android:background="?android:attr/selectableItemBackground"
                                     android:layout_gravity="center" />
                             </LinearLayout>
 
@@ -209,12 +223,13 @@
                                 android:layout_height="match_parent"
                                 android:clickable="true"
                                 android:layout_weight="2.5">
-                                <ImageView
+                                <ImageButton
                                     android:id="@+id/filter_hotel_star_rating_four"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="match_parent"
                                     android:layout_centerVertical="true"
                                     android:src="@drawable/filter_4star"
+                                    android:background="?android:attr/selectableItemBackground"
                                     android:layout_gravity="center" />
                             </LinearLayout>
 
@@ -229,12 +244,13 @@
                                 android:layout_height="match_parent"
                                 android:clickable="true"
                                 android:layout_weight="3">
-                                <ImageView
+                                <ImageButton
                                     android:id="@+id/filter_hotel_star_rating_five"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="match_parent"
                                     android:src="@drawable/filter_5star"
-                                    android:layout_gravity="center_vertical" />
+                                    android:background="?android:attr/selectableItemBackground"
+                                    android:layout_gravity="center_vertical"/>
                             </LinearLayout>
 
                         </LinearLayout>
@@ -245,7 +261,7 @@
                     android:id="@+id/vip_badge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingTop="15dp"
+                    android:paddingTop="21dp"
                     android:paddingLeft="@dimen/lx_sort_filter_padding"
                     android:paddingRight="@dimen/lx_sort_filter_padding"
                     android:text="@string/plus_vip"
@@ -262,6 +278,8 @@
                     android:orientation="vertical"
                     android:paddingLeft="@dimen/lx_sort_filter_padding"
                     android:paddingRight="@dimen/lx_sort_filter_padding"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
                     android:visibility="gone">
 
                     <TextView
@@ -269,7 +287,9 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
-                        android:text="@string/filter_vip_access" />
+                        android:text="@string/filter_vip_access"
+                        android:textSize="15sp"
+                        android:textColor="@color/hotel_filter_neighborhood_text"/>
 
                     <CheckBox
                         android:id="@+id/filter_hotel_vip"
@@ -305,7 +325,6 @@
                     android:id="@+id/neighborhood_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/lx_sort_filter_padding"
                     android:paddingLeft="@dimen/lx_sort_filter_padding"
                     android:paddingRight="@dimen/lx_sort_filter_padding"
                     android:text="@string/neighborhoods"
@@ -321,12 +340,14 @@
 
                 <RelativeLayout
                     android:id="@+id/collapsed_container"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:orientation="horizontal"
-                    android:layout_gravity="right"
+                    android:gravity="right"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:paddingRight="@dimen/lx_sort_filter_padding"
                     android:visibility="gone">
 
@@ -346,12 +367,15 @@
                         android:layout_centerVertical="true"
                         android:layout_toEndOf="@id/show_more_less_icon"
                         android:paddingLeft="5dp"
-                        android:text="@string/show_more" />
+                        android:text="@string/show_more"
+                        android:textSize="15sp"
+                        android:textColor="@color/hotel_filter_show_more_less"
+                        app:textStyle="medium"/>
                 </RelativeLayout>
 
                 <Space
                     android:layout_width="match_parent"
-                    android:layout_height="52dp" />
+                    android:layout_height="57dp" />
 
 
             </LinearLayout>
