--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -121,6 +121,7 @@
     <color name="hotel_filter_hotel_name_icon">#868686</color>
     <color name="hotel_filter_input_filed">#757575</color>
     <color name="hotel_filter_neighborhood_text">#676767</color>
+    <color name="hotel_filter_show_more_less">#8B8B8B</color>
 
     <!-- Login -->
     <color name="login_text_hotels">#FFFFFF</color>
