--- a/project/src/main/res/values-sw600dp/colors.xml
+++ b/project/src/main/res/values-sw600dp/colors.xml
@@ -43,6 +43,7 @@
     <color name="tablet_hotel_sort_filter_done_pressed">#a6c8f3</color>
     <color name="tablet_hotel_sort_filter_area_price">#2970cc</color>
     <color name="tablet_hotel_sort_filter_area_price_disabled">#800558c4</color>
+    <color name="tablet_hotel_filter_count_ring_color">#66ace3</color>
     <color name="tablet_hotel_coupon_text_color">#FFE115</color>
 
     <!-- Tablet Flights -->
