d/5415 Fix overlap of filter toolbar and hotel name

--- a/project/src/main/res/layout/widget_hotel_filter.xml
+++ b/project/src/main/res/layout/widget_hotel_filter.xml
@@ -9,6 +9,7 @@
         <com.expedia.bookings.widget.ScrollView
             android:id="@+id/filter_container"
             android:layout_width="match_parent"
+            android:paddingTop="?attr/actionBarSize"
             android:layout_height="match_parent">
 
             <LinearLayout
