--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -370,4 +370,7 @@
     <dimen name="hotel_detail_divider_margin">10dp</dimen>
     <!-- hotel filter toolbar height -->
     <dimen name="hotel_filter_height">58dp</dimen>
+
+    <!-- hotel V2 drawable padding for Free cancellation/ETP -->
+    <dimen name="hotel_free_cancellation_etp_drawable_padding">10dp</dimen>
 </resources>
