5269 - Prevent text overlap in sections of rooms and rates.

--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -39,7 +39,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="15dp"
-                    android:layout_toLeftOf="@+id/view_room_button"
+                    android:layout_toLeftOf="@+id/price_container"
                     android:maxLines="2"
                     android:paddingRight="10dp"
                     android:textColor="#3C3C3C"
@@ -48,9 +48,10 @@
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/collapsed_bed_type_text_view"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/room_type_text_view"
+                    android:layout_toLeftOf="@+id/view_room_button"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="3dp"
                     android:textColor="@color/hotelsv2_checkout_text_color"
@@ -73,6 +74,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/room_type_text_view"
+                    android:layout_toLeftOf="@+id/total_price_per_night"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="4dp"
                     android:drawableLeft="@drawable/room_bed"
@@ -86,6 +88,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/expanded_bed_type_text_view"
+                    android:layout_toLeftOf="@+id/view_room_button"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="4dp"
                     android:drawableLeft="@drawable/room_checkmark"
